# unicosm

./: .gitignore  README.md  ROADMAP.md  complementary-systems-v2.md  pyproject.toml
tests/: test_smoke.py
unicosm/: __init__.py  cli.py  config.py  context.py  engine.py  i18n.py  markdown.py  models.py  notify.py  render.py  store.py
unicosm/core/: __init__.py  astro.py  ephem.py  hd.py  timeutil.py
unicosm/data/: __init__.py  cities.py  gene_keys.py  human_design.py  iching.py  panchang.py  runes.py  tarot.py  vimshottari.py
unicosm/divination/: __init__.py  iching.py  runes.py  tarot.py
unicosm/routine/: __init__.py  scheduler.py  timing.py  tracker.py  windows.py
unicosm/synthesis/: __init__.py  llm.py  weave.py
unicosm/systems/: __init__.py  astro_age.py  base.py  bazi.py  biodynamic.py  gene_keys.py  human_design.py  jupiter_cycle.py  moon_phase.py  numerology.py  panchang.py  planetary_hours.py  profections.py  progressions.py  returns.py  sexagenary.py  sky.py  solar_term.py  tcm_organ.py  transits.py  vimshottari.py  western_natal.py  zodiacal_releasing.py
unicosm/telegram/: __init__.py  api.py  bot.py  format.py  parse.py
