[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unicosm"
version = "0.1.0"
description = "A complementary-systems cosmic-state and personal-routine engine: birth data x today, woven across many traditions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyswisseph>=2.10",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]

[project.scripts]
unicosm = "unicosm.cli:main"

[tool.setuptools.packages.find]
include = ["unicosm*"]
